# BoneAnimation

./: CMakeLists.txt  README.md  console.cpp  main.cpp  textures.cpp  textures.h  timer.cpp  w_m3a1.xma  xmaBoneBasexExporter.ms  xmanimation.cpp  xmanimation.h
math/: mat4.cpp  mat4.h  vector.cpp  vector.h
